--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <link rel=“stylesheet” href=“style.css”>
 </head>
 <body>
+    <h1>Receita Cupcake Red Velvet <h1>
+        <img src="https://www.receitas-sem-fronteiras.com/uploads/media/red-velvet-cupcakes.jpg?1385788517">
+        <h2>Ingredientes</h2>
+        <ul>
+            <li> 350 g de farinha de trigo</li>
+            <li>300 g de margarina</li>
+            <li>300 g de açúcar</li>
+            <li>25 g de chocolate em pó</li>
+            <li>1 pitada de sal</li>
+            <li>1 pitada de bicarbonato de sódio</li>
+            <li>1 colher (chá) de corante em gel vermelho</li>
+            <li>20 ml de vinagre</li>
+            <li>250 ml de leite</li>
+            <li>1 colher (sopa) de fermento químico para bolos</li>
+            <li>2 ovos</li>
+            <li>2 colheres (sopa) de essência de baunilha</li>
+        </ul>
     <header>
         <h1>Cupcacke Red Velvet</h1>
     </header>
