--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
             <li>2 ovos</li>
             <li>2 colheres (sopa) de essência de baunilha</li>
         </ul>
-    <header>
+        <h2>Modo de preparo</h2>
+        <ol>
+            <li>Bater a margarina com o açúcar e ovos até formar um creme claro, reserve. Misturar à parte em uma vasilha os ingredientes secos. Adicionar o corante, a essência, o buttermilk (mistura do leite e o vinagre) e o creme reservado, alternando com os ingredientes secos. Preparar a forma para cupcakes, forrando com os pelotines número 0 (forminhas para cupcake).</li>
+        </ol>
+1
+2.Preaquecer o forno em 180°C;
+3Coloque a massa em sacos de confeitar descartáveis e distribua   nas forminhas. Asse por aproximadamente 20 minutos. Para a corbertura misure na batedeira a manteiga, a essência, metade do açucar e o leite. Bater até ficar cremoso. Diminuir a velocidade da batedeira e juntar aos poucos o restante do açucar, até ponte de confeitar. Se necessário, acrescentar mais açúcar até atingir o ponto desejado;
+        <h3>dúvidas? e-mail: linomaluh@gmail.com</h3>
+        <header>
         <h1>Cupcacke Red Velvet</h1>
     </header>
     
